[package]
edition = "2021"
name = "risingwave_source"
version = "0.0.1-SNAPSHOT"

[dependencies]
anyhow = "1"
async-std = { version = "1" }
async-stream = "0.3"
async-trait = "0.1"
backtrace = "0.3"
byteorder = "1"
bytes = "1"
chrono = "0.4"
crc32fast = "1"
either = "1"
farmhash = "1"
futures = { version = "0.3", default-features = false, features = ["alloc"] }
itertools = "0.10"
lazy_static = "1"
log = "0.4"
log4rs = "1"
memcomparable = { path = "../utils/memcomparable" }
num-traits = "0.2"
paste = "1"
prost = "0.9"
prost-types = "0.9"
protobuf = "2"
protobuf-codegen-pure = "2.25.2"
pulsar = { git = "https://github.com/shanicky/pulsar-rs.git", rev = "3b6353943833057f4379a354c1754a4e86fa57ff" }
rdkafka = { version = "0.27", features = ["cmake-build"] }
risingwave-pb = { path = "../prost" }
risingwave_common = { path = "../common" }
risingwave_storage = { path = "../storage" }
rust_decimal = "1"
serde = { version = "1", features = ["derive"] }
serde-protobuf = "0.8"
serde-value = "0.7"
serde_derive = "1"
serde_json = "1"
serde_with = "1"
smallvec = "1"
static_assertions = "1"
tempfile = "3"
thiserror = "1"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "sync", "macros", "time", "signal", "fs"] }
tokio-stream = "0.1"
tonic = "0.6"
twox-hash = "1"
typed-builder = "0.9"
url = "2"

[dev-dependencies]
approx = "0.5"
assert_matches = "1"
rand = "0.8"
tempfile = "3"
