[package]
name = "risingwave_storage"
version = "0.1.2"
edition = "2021"

[dependencies]
anyhow = "1"
async-stream = "0.3"
async-trait = "0.1"
byteorder = "1"
bytes = { version = "1", features = ["serde"] }
chrono = "0.4"
crc32fast = "1"
either = "1"
farmhash = "1"
futures = { version = "0.3", default-features = false, features = ["alloc"] }
futures-retry = "0.6"
hyper = "0.14"
itertools = "0.10"
lazy_static = "1"
log = "0.4"
memcomparable = { path = "../utils/memcomparable" }
moka = { version = "0.7", features = ["future"] }
num-integer = "0.1"
num-traits = "0.2"
parking_lot = "0.12"
paste = "1"
prometheus = { version = "0.13", features = ["process"] }
prost = "0.9"
rand = "0.8"
risingwave-pb = { path = "../prost" }
risingwave_common = { path = "../common" }
risingwave_rpc_client = { path = "../rpc_client" }
rocksdb = { git = "https://github.com/tikv/rust-rocksdb.git", rev = "fa83ff19", features = ["encryption", "static_libcpp"], optional = true }
rusoto_core = "0.47"
rusoto_s3 = "0.47"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = "1"
smallvec = "1"
thiserror = "1"
tikv-client = { version = "0.1.0", optional = true }
tokio = { version = "1", features = ["fs", "rt", "rt-multi-thread", "sync", "macros", "time", "signal"] }
tokio-retry = "0.3"
tokio-stream = "0.1"
tonic = "0.6"
tracing = "0.1"
twox-hash = "1"

[dev-dependencies]
uuid = { version = "0.8", features = ["v4"] }

[features]
rocksdb-local = ["rocksdb"]
tikv = ["tikv-client"]
