[package]
name = "risingwave_storage"
version = "0.1.3"
edition = "2021"

[dependencies]
anyhow = "1"
async-stream = "0.3"
async-trait = "0.1"
aws-config = "0.8"
aws-endpoint = "0.8"
aws-sdk-s3 = "0.8"
aws-smithy-http = "0.38"
aws-smithy-types = "0.38"
aws-types = { version = "0.8", features = ["hardcoded-credentials"] }
byteorder = "1"
bytes = { version = "1", features = ["serde"] }
chrono = "0.4"
crc32fast = "1"
crossbeam = "0.8.1"
dashmap = "5"
either = "1"
farmhash = "1"
futures = { version = "0.3", default-features = false, features = ["alloc"] }
hyper = "0.14"
itertools = "0.10"
lazy_static = "1"
log = "0.4"
memcomparable = { path = "../utils/memcomparable" }
value-encoding = { path = "../utils/value-encoding" }
moka = { version = "0.7", features = ["future"] }
num-integer = "0.1"
num-traits = "0.2"
parking_lot = "0.12"
paste = "1"
prometheus = { version = "0.13", features = ["process"] }
prost = "0.9"
rand = "0.8"
risingwave_common = { path = "../common" }
risingwave_pb = { path = "../prost" }
risingwave_rpc_client = { path = "../rpc_client" }
rocksdb = { git = "https://github.com/tikv/rust-rocksdb.git", rev = "fa83ff19", features = [
    "encryption",
    "static_libcpp",
], optional = true }
serde = { version = "1", features = ["derive"] }
smallvec = "1"
thiserror = "1"
tikv-client = { git = "https://github.com/tikv/client-rust", rev = "5714b2", optional = true }
tokio = { version = "1", features = [
    "fs",
    "rt",
    "rt-multi-thread",
    "sync",
    "macros",
    "time",
    "signal",
] }
tokio-retry = "0.3"
tokio-stream = "0.1"
tonic = "0.6"
tracing = { version = "0.1", features = ["release_max_level_info"] }
twox-hash = "1"
workspace-hack = { version = "0.1", path = "../workspace-hack" }

[dev-dependencies]
uuid = { version = "0.8", features = ["v4"] }

[features]
rocksdb-local = ["rocksdb"]
tikv = ["tikv-client"]
