[package]
name = "risingwave_batch"
version = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
keywords = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[dependencies]
anyhow = { workspace = true }
assert_matches = { workspace = true }
async-recursion = { workspace = true }
async-trait = { workspace = true }
either = { workspace = true }
futures = { workspace = true, features = ["alloc"] }
futures-async-stream = { workspace = true }
futures-util = { workspace = true }
iceberg = { workspace = true }
itertools = { workspace = true }
linkme = { workspace = true }
memcomparable = { workspace = true }
mysql_async = { workspace = true }
opendal = { workspace = true }
panic-message = { workspace = true }
parking_lot = { workspace = true }
parquet = { workspace = true }
prometheus = { workspace = true, features = ["process"] }
rand = { workspace = true }
risingwave_common = { workspace = true }
risingwave_connector = { workspace = true }
risingwave_dml = { workspace = true }
risingwave_expr = { workspace = true }
risingwave_hummock_sdk = { workspace = true }
risingwave_pb = { workspace = true }
risingwave_rpc_client = { workspace = true }
risingwave_storage = { workspace = true }
scopeguard = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
thiserror-ext = { workspace = true }
tokio = { version = "0.2", package = "madsim-tokio", features = [
    "rt",
    "rt-multi-thread",
    "sync",
    "macros",
    "time",
    "signal",
    "fs",
] }
tokio-postgres = { workspace = true }
tokio-stream = { workspace = true }
tonic = { workspace = true }
tracing = { workspace = true }
twox-hash = { workspace = true }

[target.'cfg(not(madsim))'.dependencies]
workspace-hack = { path = "../workspace-hack" }

[dev-dependencies]
rand = { workspace = true }
risingwave_hummock_sdk = { workspace = true }
tempfile = { workspace = true }

[lints]
workspace = true
