[package]
name = "risingwave_batch"
version = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
keywords = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[dependencies]
anyhow = "1"
assert_matches = "1"
async-recursion = "1"
async-trait = "0.1"
either = "1"
futures = { version = "0.3", default-features = false, features = ["alloc"] }
futures-async-stream = { workspace = true }
futures-util = "0.3"
iceberg = { workspace = true }
itertools = { workspace = true }
linkme = { workspace = true }
memcomparable = "0.2"
mysql_async = { workspace = true }
opendal = { workspace = true }
panic-message = "0.3"
parking_lot = { workspace = true }
parquet = { workspace = true }
prometheus = { version = "0.14", features = ["process"] }
rand = { workspace = true }
risingwave_common = { workspace = true }
risingwave_connector = { workspace = true }
risingwave_dml = { workspace = true }
risingwave_expr = { workspace = true }
risingwave_hummock_sdk = { workspace = true }
risingwave_pb = { workspace = true }
risingwave_rpc_client = { workspace = true }
risingwave_storage = { workspace = true }
scopeguard = "1"
serde_json = "1"
thiserror = "2"
thiserror-ext = { workspace = true }
tokio = { version = "0.2", package = "madsim-tokio", features = [
    "rt",
    "rt-multi-thread",
    "sync",
    "macros",
    "time",
    "signal",
    "fs",
] }
tokio-postgres = "0.7"
tokio-stream = { workspace = true }
tonic = { workspace = true }
tracing = "0.1"
twox-hash = "2"

[dev-dependencies]
rand = { workspace = true }
risingwave_hummock_sdk = { workspace = true }
tempfile = "3"

[target.'cfg(not(madsim))'.dependencies]
workspace-hack = { path = "../workspace-hack" }

[lints]
workspace = true
