[package]
name = "risingwave_bench"
version = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
keywords = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[dependencies]
anyhow = "1"
async-trait = "0.1"
aws-config = { workspace = true }
aws-sdk-s3 = { workspace = true }
aws-smithy-http = { workspace = true }
aws-smithy-types = { workspace = true }
bcc = { version = "0.0.33", optional = true }
bytes = "1"
bytesize = { version = "1", features = ["serde"] }
clap = { workspace = true }
futures = { version = "0.3", default-features = false, features = ["alloc"] }
futures-async-stream = { workspace = true }
hdrhistogram = "7"
itertools = { workspace = true }
libc = "0.2"
opentelemetry = { workspace = true, optional = true }
parking_lot = { workspace = true }
plotters = { version = "0.3.5", default-features = false, features = [
    "svg_backend",
    "line_series",
    "point_series"
] }
prometheus = { version = "0.13", features = ["process"] }
rand = { workspace = true }
risingwave_common = { workspace = true }
risingwave_connector = { workspace = true }
risingwave_pb = { workspace = true }
risingwave_rt = { workspace = true, optional = true }
risingwave_storage = { workspace = true }
risingwave_stream = { workspace = true }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
thiserror-ext = { workspace = true }
tokio = { version = "0.2", package = "madsim-tokio", features = [
    "fs",
    "rt",
    "rt-multi-thread",
    "sync",
    "macros",
    "time",
    "signal",
] }
tokio-stream = { workspace = true }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = "0.3.17"

[target.'cfg(not(madsim))'.dependencies]
workspace-hack = { path = "../workspace-hack" }

[target.'cfg(target_os = "linux")'.dependencies]
nix = { version = "0.29", features = ["fs", "mman"] }

[[bin]]
name = "s3-bench"
path = "s3_bench/main.rs"

[[bin]]
name = "sink-bench"
path = "sink_bench/main.rs"

[features]
bpf = ["bcc", "risingwave_storage/bpf"]
trace = ["opentelemetry", "risingwave_rt", "tracing/release_max_level_trace"]

[lints]
workspace = true
