[package]
name = "risingwave_bench"
version = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
keywords = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[package.metadata.cargo-machete]
ignored = ["bcc", "opentelemetry"]

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
futures = { workspace = true, features = ["alloc"] }
futures-async-stream = { workspace = true }
itertools = { workspace = true }
plotters = { workspace = true, features = ["svg_backend", "line_series", "point_series"] }
risingwave_common = { workspace = true }
risingwave_connector = { workspace = true }
risingwave_stream = { workspace = true }
sea-orm  = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_yaml = { workspace = true }
thiserror-ext = { workspace = true }
tokio = { version = "0.2", package = "madsim-tokio", features = [
    "fs",
    "rt",
    "rt-multi-thread",
    "sync",
    "macros",
    "time",
    "signal",
] }

[target.'cfg(not(madsim))'.dependencies]
workspace-hack = { path = "../workspace-hack" }

[target.'cfg(target_os = "linux")'.dependencies]
nix = { version = "0.29", features = ["fs", "mman"] }

[[bin]]
name = "sink-bench"
path = "sink_bench/main.rs"

[lints]
workspace = true
