[package]
name = "risingwave_bench"
version = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
keywords = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[package.metadata.cargo-machete]
ignored = ["bcc", "opentelemetry"]

[dependencies]
anyhow = "1"
clap = { workspace = true }
futures = { version = "0.3", default-features = false, features = ["alloc"] }
futures-async-stream = { workspace = true }
itertools = { workspace = true }
plotters = { version = "0.3.5", default-features = false, features = [
    "svg_backend",
    "line_series",
    "point_series"
] }
risingwave_common = { workspace = true }
risingwave_connector = { workspace = true }
risingwave_stream = { workspace = true }
sea-orm  = { workspace = true }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
thiserror-ext = { workspace = true }
tokio = { version = "0.2", package = "madsim-tokio", features = [
    "fs",
    "rt",
    "rt-multi-thread",
    "sync",
    "macros",
    "time",
    "signal",
] }

[target.'cfg(not(madsim))'.dependencies]
workspace-hack = { path = "../workspace-hack" }

[target.'cfg(target_os = "linux")'.dependencies]
nix = { version = "0.30", features = ["fs", "mman"] }

[[bin]]
name = "sink-bench"
path = "sink_bench/main.rs"

[lints]
workspace = true
