[package]
name = "risingwave_cmd"
version = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
keywords = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[features]
rw-static-link = ["workspace-config/rw-static-link"]
rw-dynamic-link = ["workspace-config/rw-dynamic-link"]
default = ["rw-static-link"]

[package.metadata.cargo-machete]
ignored = ["workspace-hack", "workspace-config", "task_stats_alloc"]

[package.metadata.cargo-udeps.ignore]
normal = ["workspace-hack", "workspace-config", "task_stats_alloc"]

[dependencies]
clap = { version = "4", features = ["derive"] }
prometheus = { version = "0.13" }
risingwave_common = { workspace = true }
risingwave_compactor = { workspace = true }
risingwave_compute = { workspace = true }
risingwave_ctl = { workspace = true }
risingwave_expr_impl = { workspace = true }
risingwave_frontend = { workspace = true }
risingwave_meta_node = { workspace = true }
risingwave_rt = { workspace = true }
tikv-jemallocator = { workspace = true, features = [
    "unprefixed_malloc_on_supported_platforms",
] }
tokio = { version = "0.2", package = "madsim-tokio", features = [
    "rt",
    "rt-multi-thread",
    "sync",
    "macros",
    "time",
    "signal",
    "fs",
    "tracing",
] }

workspace-config = { path = "../utils/workspace-config" }
workspace-hack = { path = "../workspace-hack" }

[target.'cfg(enable_task_local_alloc)'.dependencies]
task_stats_alloc = { path = "../utils/task_stats_alloc" }

[lib]
test = false

[[bin]]
name = "frontend"
path = "src/bin/frontend_node.rs"
test = false

[[bin]]
name = "meta-node"
path = "src/bin/meta_node.rs"
test = false

[[bin]]
name = "compute-node"
path = "src/bin/compute_node.rs"
test = false

[[bin]]
name = "compactor"
path = "src/bin/compactor.rs"
test = false

[[bin]]
name = "risectl"
path = "src/bin/ctl.rs"
test = false

[lints]
workspace = true
