[package]
name = "risingwave_cmd_all"
version = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
keywords = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[features]
rw-static-link = ["workspace-config/rw-static-link"]
rw-dynamic-link = ["workspace-config/rw-dynamic-link"]
default = ["rw-static-link"]

[package.metadata.cargo-machete]
ignored = ["workspace-hack", "workspace-config", "task_stats_alloc"]

[package.metadata.cargo-udeps.ignore]
ignored = ["workspace-hack", "workspace-config", "task_stats_alloc"]

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["cargo", "derive"] }
console = "0.15"
const-str = "0.5"
prometheus = { version = "0.13" }
risingwave_cmd = { workspace = true }
risingwave_common = { workspace = true }
risingwave_compactor = { workspace = true }
risingwave_compute = { workspace = true }
risingwave_ctl = { workspace = true }
risingwave_frontend = { workspace = true }
risingwave_meta = { workspace = true }
risingwave_rt = { workspace = true }
shell-words = "1.1.0"
strum = "0.25"
strum_macros = "0.25"
tempfile = "3"
tokio = { version = "0.2", package = "madsim-tokio", features = [
    "rt",
    "rt-multi-thread",
    "sync",
    "macros",
    "time",
    "signal",
    "fs",
] }
tracing = { version = "0.1" }
workspace-config = { path = "../utils/workspace-config" }
workspace-hack = { path = "../workspace-hack" }

[dev-dependencies]
expect-test = "1"

[build-dependencies]
vergen = { version = "8", default-features = false, features = [
    "build",
    "git",
    "gitcl",
] }

[target.'cfg(enable_task_local_alloc)'.dependencies]
task_stats_alloc = { path = "../utils/task_stats_alloc" }

[target.'cfg(unix)'.dependencies]
tikv-jemallocator = { workspace = true, features = [
    "unprefixed_malloc_on_supported_platforms",
] }

[[bin]]
name = "risingwave"
path = "src/bin/risingwave.rs"

[lints]
workspace = true
