[package]
name = "risingwave_cmd_all"
version = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
keywords = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[package.metadata.cargo-machete]
ignored = ["workspace-hack", "workspace-config", "task_stats_alloc", "tikv-jemallocator"]

[package.metadata.cargo-udeps.ignore]
ignored = ["workspace-hack", "workspace-config", "task_stats_alloc", "tikv-jemallocator"]

[features]
default = ["rw-static-link"]
rw-static-link = ["workspace-config/rw-static-link"]
rw-dynamic-link = ["workspace-config/rw-dynamic-link"]
openssl-vendored = ["workspace-config/openssl-vendored"]
all-udf = ["external-udf", "wasm-udf", "js-udf", "python-udf"]
external-udf = ["risingwave_expr_impl/external-udf"]
wasm-udf = ["risingwave_expr_impl/wasm-udf"]
js-udf = ["risingwave_expr_impl/js-udf"]
python-udf = ["risingwave_expr_impl/python-udf"]
fips = ["workspace-config/fips"]

[dependencies]
clap = { workspace = true }
console = { workspace = true }
const-str = { workspace = true }
home = { workspace = true }
risingwave_batch_executors = { workspace = true }
risingwave_cmd = { workspace = true }
risingwave_common = { workspace = true }
risingwave_compactor = { workspace = true }
risingwave_compute = { workspace = true }
risingwave_ctl = { workspace = true }
risingwave_expr_impl = { workspace = true }
risingwave_frontend = { workspace = true }
risingwave_meta_node = { workspace = true }
risingwave_rt = { workspace = true }
shell-words = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }
tikv-jemallocator = { workspace = true, features = [
    "unprefixed_malloc_on_supported_platforms",
] }
tokio = { version = "0.2", package = "madsim-tokio", features = [
    "rt",
    "rt-multi-thread",
    "sync",
    "macros",
    "time",
    "signal",
    "fs",
] }
tracing = { workspace = true }
workspace-config = { workspace = true }
workspace-hack = { workspace = true }

[build-dependencies]
thiserror-ext = { workspace = true }
vergen = { workspace = true, features = ["build", "git", "gitcl"] }

[dev-dependencies]
expect-test = { workspace = true }

[[bin]]
name = "risingwave"
path = "src/bin/risingwave.rs"
test = false

[lints]
workspace = true
