[package]
name = "risingwave_cmd_all"
version = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
keywords = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[package.metadata.cargo-machete]
ignored = [
    "workspace-hack",
    "workspace-config",
    "task_stats_alloc",
    "tikv-jemallocator",
    "risingwave_connector",
]

[package.metadata.cargo-udeps.ignore]
ignored = [
    "workspace-hack",
    "workspace-config",
    "task_stats_alloc",
    "tikv-jemallocator",
    "risingwave_connector",
]

[features]
default = ["rw-static-link", "all-connectors"]
rw-static-link = ["workspace-config/rw-static-link"]
rw-dynamic-link = ["workspace-config/rw-dynamic-link"]
openssl-vendored = ["workspace-config/openssl-vendored"]
udf = ["risingwave_expr_impl/udf"]
fips = ["workspace-config/fips"]
all-connectors = ["risingwave_connector/all-sinks", "risingwave_connector/all-sources"]

[dependencies]
clap = { workspace = true }
console = "0.15"
const-str = "0.6"
home = "0.5"
risingwave_batch_executors = { workspace = true }
risingwave_cmd = { workspace = true }
risingwave_common = { workspace = true }
risingwave_compactor = { workspace = true }
risingwave_compute = { workspace = true }
# put here just to tweak feature flags
risingwave_connector = { workspace = true }
risingwave_ctl = { workspace = true }
risingwave_expr_impl = { workspace = true }
risingwave_frontend = { workspace = true }
risingwave_meta_node = { workspace = true }
risingwave_rt = { workspace = true }
shell-words = "1.1.0"
strum = "0.27"
strum_macros = "0.27"
tikv-jemallocator = { workspace = true, features = [
    "unprefixed_malloc_on_supported_platforms",
] }
tokio = { version = "0.2", package = "madsim-tokio", features = [
    "rt",
    "rt-multi-thread",
    "sync",
    "macros",
    "time",
    "signal",
    "fs",
] }
tracing = { version = "0.1" }
workspace-config = { path = "../utils/workspace-config" }
workspace-hack = { path = "../workspace-hack" }

[dev-dependencies]
expect-test = "1"

[build-dependencies]
thiserror-ext = { workspace = true }
vergen = { version = "8", default-features = false, features = [
    "build",
    "git",
    "gitcl",
] }

[[bin]]
name = "risingwave"
path = "src/bin/risingwave.rs"
test = false

[lints]
workspace = true
