[package]
name = "risingwave_common"
version = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
keywords = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[package.metadata.cargo-machete]
ignored = ["workspace-hack"]

[package.metadata.cargo-udeps.ignore]
normal = ["workspace-hack"]

[dependencies]
anyhow = "1"
arc-swap = "1"
arrow-array = { workspace = true }
arrow-buffer = { workspace = true }
arrow-cast = { workspace = true }
arrow-schema = { workspace = true }
async-trait = "0.1"
auto_enums = "0.8"
auto_impl = "1"
bitflags = "2"
byteorder = "1"
bytes = "1"
chrono = { version = "0.4", default-features = false, features = [
    "clock",
    "std",
] }
chrono-tz = { version = "0.8", features = ["case-insensitive"] }
clap = { version = "4", features = ["derive"] }
comfy-table = "7"
crc32fast = "1"
easy-ext = "1"
educe = "0.4"
either = "1"
enum-as-inner = "0.6"
enumflags2 = { version = "0.7.8" }
ethnum = { version = "1", features = ["serde"] }
fixedbitset = { version = "0.4", features = ["std"] }
fs-err = "2"
futures = { version = "0.3", default-features = false, features = ["alloc"] }
hex = "0.4.3"
http = "0.2"
humantime = "2.1"
hyper = "0.14"
hytra = { workspace = true }
itertools = "0.11"
itoa = "1.0"
jsonbb = "0.1.2"
lru = { git = "https://github.com/risingwavelabs/lru-rs.git", rev = "cb2d7c7" }
memcomparable = { version = "0.2", features = ["decimal"] }
num-integer = "0.1"
num-traits = "0.2"
number_prefix = "0.4.0"
opentelemetry = { version = "0.20", default-features = false }
parking_lot = "0.12"
parse-display = "0.8"
paste = "1"
pin-project-lite = "0.2"
postgres-types = { version = "0.2.6", features = [
    "derive",
    "with-chrono-0_4",
    "with-serde_json-1",
] }
prehash = "1"
prometheus = { version = "0.13" }
prost = { workspace = true }
rand = "0.8"
regex = "1"
reqwest = { version = "0.11", features = ["json"] }
risingwave_common_proc_macro = { path = "./proc_macro" }
risingwave_pb = { workspace = true }
rust_decimal = { version = "1", features = ["db-postgres", "maths"] }
ryu = "1.0"
serde = { version = "1", features = ["derive"] }
serde_bytes = "0.11"
serde_default = "0.1"
serde_json = "1"
serde_with = "3"
smallbitset = "0.7.1"
speedate = "0.12.0"
static_assertions = "1"
strum = "0.25"
strum_macros = "0.25"
sysinfo = { version = "0.29", default-features = false }
thiserror = "1"
tinyvec = { version = "1", features = ["rustc_1_55", "grab_spare_slice"] }
tokio = { version = "0.2", package = "madsim-tokio", features = [
    "rt",
    "rt-multi-thread",
    "sync",
    "macros",
    "time",
    "signal",
] }
toml = "0.8"
tonic = { workspace = true }
tracing = "0.1"
tracing-opentelemetry = "0.21"
tracing-subscriber = "0.3.17"
twox-hash = "1"
url = "2"
uuid = { version = "1", features = ["v4"] }

[target.'cfg(not(madsim))'.dependencies]
workspace-hack = { path = "../workspace-hack" }
http-body = "0.4.5"
tower-layer = "0.3.2"
tower-service = "0.3.2"

[target.'cfg(target_os = "linux")'.dependencies]
procfs = { version = "0.16", default-features = false }
libc = "0.2"

[target.'cfg(target_os = "macos")'.dependencies]
darwin-libproc = { git = "https://github.com/risingwavelabs/darwin-libproc.git", rev = "a502be24bd0971463f5bcbfe035a248d8ba503b7" }
libc = "0.2.148"
mach2 = "0.4"

[dev-dependencies]
criterion = { workspace = true }
more-asserts = "0.3"
pretty_assertions = "1"
rand = "0.8"
rusty-fork = "0.3"
tempfile = "3"

[[bench]]
name = "bench_encoding"
harness = false

[[bench]]
name = "bitmap"
harness = false

[[bench]]
name = "bench_hash_key_encoding"
harness = false

[[bench]]
name = "bench_data_chunk_encoding"
harness = false

[[bench]]
name = "bench_data_chunk_compact"
harness = false

[[bench]]
name = "bench_array"
harness = false

[[bin]]
name = "example-config"
path = "src/bin/default_config.rs"

[lints]
workspace = true
