[package]
name = "risingwave_common"
version = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
keywords = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[dependencies]
ahash = "0.8"
anyhow = "1"
arc-swap = { workspace = true }
arrow-52-array = { package = "arrow-array", version = "52" }
arrow-52-buffer = { package = "arrow-buffer", version = "52" }
arrow-52-cast = { package = "arrow-cast", version = "52" }
arrow-52-schema = { package = "arrow-schema", version = "52" }
arrow-54-array = { package = "arrow-array", version = "54" }
arrow-54-buffer = { package = "arrow-buffer", version = "54" }
arrow-54-cast = { package = "arrow-cast", version = "54" }
arrow-54-schema = { package = "arrow-schema", version = "54" }
async-trait = "0.1"
auto_enums = { workspace = true }
auto_impl = "1"
bitfield-struct = "0.10"
bitflags = "2"
byteorder = "1"
bytes = "1"
chrono = { version = "0.4", default-features = false, features = [
    "clock",
    "std",
] }
chrono-tz = { version = "0.10", features = ["case-insensitive"] }
clap = { workspace = true }
comfy-table = "7"
crc32fast = "1"
easy-ext = "1"
educe = "0.6"
either = "1"
enum-as-inner = "0.6"
enumflags2 = { version = "0.7.8" }
ethnum = { version = "1", features = ["serde"] }
fixedbitset = "0.5"
foyer = { workspace = true }
futures = { version = "0.3", default-features = false, features = ["alloc"] }
governor = { workspace = true }
hashbrown = "0.14"
hex = "0.4.3"
http = "1"
humantime = "2.2"
itertools = { workspace = true }
itoa = "1.0"
jiff = "0.1.15"
jsonbb = { workspace = true }
lru = { workspace = true }
memcomparable = { version = "0.2", features = ["decimal"] }
num-integer = "0.1"
num-traits = "0.2"
number_prefix = "0.4.0"
opentelemetry = { workspace = true }
opentelemetry_sdk = { workspace = true }
parking_lot = { workspace = true }
parse-display = "0.10"
paste = "1"
pin-project-lite = { workspace = true }
postgres-types = { version = "0.2.6", features = [
    "derive",
    "with-chrono-0_4",
    "with-serde_json-1",
] }
prometheus = { version = "0.13" }
prost = { workspace = true }
rand = { workspace = true }
regex = "1"
reqwest = { version = "0.12.2", features = ["json"] }
risingwave-fields-derive = { path = "./fields-derive" }
risingwave_common_estimate_size = { workspace = true }
risingwave_common_metrics = { path = "./metrics" }
risingwave_common_proc_macro = { workspace = true }
risingwave_common_secret = { path = "./secret" }
risingwave_error = { workspace = true }
risingwave_license = { workspace = true }
risingwave_pb = { workspace = true }
risingwave_telemetry_event = { workspace = true }
rust_decimal = { version = "1", features = ["db-postgres", "maths"] }
rw_iter_util = { workspace = true }
rw_resource_util = { workspace = true }
ryu = "1.0"
serde = { version = "1", features = ["derive"] }
serde_bytes = "0.11"
serde_default = "0.2"
serde_json = "1"
serde_with = "3"
smallbitset = "0.7.1"
smallvec = "1"
speedate = "0.15.0"
stacker = "0.1"
static_assertions = "1"
strum = "0.27"
strum_macros = "0.27"
sysinfo = { version = "0.33", default-features = false, features = ["system"] }
thiserror = "1"
thiserror-ext = { workspace = true }
tinyvec = { version = "1", features = ["rustc_1_55", "grab_spare_slice"] }
tokio = { version = "0.2", package = "madsim-tokio", features = [
    "rt",
    "rt-multi-thread",
    "sync",
    "macros",
    "time",
    "signal",
] }
tokio-retry = "0.3"
tokio-util = { workspace = true }
toml = "0.8"
tracing = "0.1"
tracing-futures = { version = "0.2", features = ["futures-03"] }
tracing-opentelemetry = { workspace = true }
tracing-subscriber = "0.3.17"
twox-hash = "2"
url = "2"
uuid = { version = "1", features = ["v4"] }

[target.'cfg(not(madsim))'.dependencies]
workspace-hack = { path = "../workspace-hack" }
http-body = "0.4.5"
tower-layer = "0.3.3"
tower-service = "0.3.3"

[target.'cfg(target_os = "linux")'.dependencies]
procfs = { version = "0.17", default-features = false }
libc = "0.2"

[target.'cfg(target_os = "macos")'.dependencies]
darwin-libproc = { git = "https://github.com/risingwavelabs/darwin-libproc.git", rev = "a502be24bd0971463f5bcbfe035a248d8ba503b7" }
libc = "0.2"
mach2 = "0.4"

[dev-dependencies]
coarsetime = "0.1"
criterion = { workspace = true }
expect-test = "1"
more-asserts = "0.3"
pretty_assertions = "1"
rand = { workspace = true }
rusty-fork = "0.3"
tempfile = "3"

[[bench]]
name = "bench_encoding"
harness = false

[[bench]]
name = "bitmap"
harness = false

[[bench]]
name = "bench_hash_key_encoding"
harness = false

[[bench]]
name = "bench_column_aware_row_encoding"
harness = false

[[bench]]
name = "bench_data_chunk_encoding"
harness = false

[[bench]]
name = "bench_data_chunk_compact"
harness = false

[[bench]]
name = "bench_array"
harness = false

[[bench]]
name = "bench_sequencer"
harness = false

[[bench]]
name = "bench_lru"
harness = false

[lints]
workspace = true
